add gh actions, add zx and wrangler for future deployments

--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "devDependencies": {
     "@myriaddreamin/typst-ts-node-compiler": "^0.6.0",
     "toml": "^3.0.0"
+  },
+  "dependencies": {
+    "wrangler": "^4.37.1",
+    "zx": "^8.8.1"
   }
 }
